model_runs/oldBasic/BASIC_run_10/nohup.out
  File "BASIC_classify_blobs.py", line 97
    def return_zeros(x,output_dim)
                                 ^
SyntaxError: invalid syntax
